Vectors should not be Resetable.
Reseting a Vector is not a common operation. The method ended up being a
simple helper method to create a zeroed vector. It does not belong on
the class and as a result has been removed, together with the Resetable
interface.

Consequently, Numeric instances are no longer Resetable either.

Signed-off-by: Gary Pampara <gpampara@gmail.com>